--- a/INDEX.html
+++ b/INDEX.html
@@ -2,12 +2,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>Restaurant</title>
-  <!--<link rel="stylesheet" href="style.css">-->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="main">
     <div class="wrapper">
-      <div class="header">
+      <div class="head">
         <nav>
           <div class="logo">
             <a href="">Restaurant</a>
