--- a/INDEX.html
+++ b/INDEX.html
@@ -10,7 +10,7 @@
       <div class="head">
         <nav>
           <div class="logo">
-            <a href="">Restaurant</a>
+            <a href=""><img src="images\logo.png" alt="" /></a>
           </div>
           <ul>
             <li><a href="">HOME</a></li>
@@ -24,7 +24,7 @@
         <div class="content">
           <h1>Welcome to Restaurant</h1>
           <p>description of the restaurant to be here</p>
-          <button>ORDER NOW</button>
+          <button onclick="">ORDER NOW</button>
         </div>
       </div>
     </div>
