--- a/INDEX.html
+++ b/INDEX.html
@@ -7,25 +7,82 @@
 <body>
   <div class="main">
     <div class="wrapper">
-      <div class="head">
-        <nav>
-          <div class="logo">
-            <a href=""><img src="images\logo.png" alt="" /></a>
-          </div>
-          <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT US</a></li>
-            <li><a href="">MENU</a></li>
-            <li><a href="">GALLERY</a></li>
-            <li><a href="">HEALTHY TIPS</a></li>
-            <li><a href="">CONTACT US</a></li>
-          </ul>
-        </nav>
-        <div class="content">
-          <h1>Welcome to Restaurant</h1>
-          <p>description of the restaurant to be here</p>
-          <button onclick="">ORDER NOW</button>
+      <nav>
+        <div class="logo">
+          <a href=""><img src="logodc.png" alt="" /></a>
         </div>
+        <ul>
+          <li><a href="">HOME</a></li>
+          <li><a href="#about">ABOUT US</a></li>
+          <li><a href="#menu">MENU</a></li>
+          <li><a href="">GALLERY</a></li>
+          <li><a href="">HEALTHY TIPS</a></li>
+          <li><a href="">CONTACT US</a></li>
+        </ul>
+      </nav>
+      <div class="about" id="about">
+        <div class="content">
+          <h1>Welcome to <span>DESI CUISINE</span></h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+            efficitur, ex nec lacinia consequat, arcu diam malesuada lacus, nec
+            rutrum velit est sit amet ante. Cras porta vestibulum cursus. Orci
+            varius natoque penatibus et magnis dis parturient montes, nascetur
+            ridiculus mus. Nunc at fringilla lacus, id egestas est. In eleifend
+            lobortis iaculis. Sed vel lectus sit amet orci malesuada volutpat
+            vel ac magna. Mauris tincidunt erat nisi, ut varius lorem gravida
+            vitae. Nullam sed pharetra nunc. Cras eget elit ut nisl cursus
+            tempor. Aliquam iaculis nec magna at volutpat. Quisque sed leo
+            congue, fringilla urna at, finibus ipsum.
+          </p>
+        </div>
+      </div>
+      <div class="menu" id="menu">
+        <pre>
+          
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
+
+
+
+
+          .
+        </pre>
       </div>
     </div>
   </div>
