--- a/main.html
+++ b/main.html
@@ -149,11 +149,34 @@
         <div class="ndish">
           <img src="des3.jpg" alt="" class="nimg" />
           <div class="ninfo">
-            <h2>Gulab Jamun</h2>
+            <h2>Gulab<br />Jamun</h2>
             <h3>₹ 60</h3>
             <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="gallery" id="gallery">
+      <h1>Gallery</h1>
+      <div class="single">
+        <img src="single.jpg" alt="" />
+        <img src="ckbr.jpg" alt="" />
+      </div>
+      <div class="doubles">
+        <img src="pexels-rajesh-tp-1624487.jpg" alt="" />
+        <img src="pexels-2410606.jpg" alt="" />
+        <img src="pexels-momo-king-5409019.jpg" alt="" />
+        <img src="pexels-vincent-rivaud-2471171.jpg" alt="" />
+      </div>
+      <div class="hrzt">
+        <img src="tikka.jpg" alt="" />
+        <img src="pizza.jpg" alt="" />
+        <img src="burger.jpg" alt="" />
+      </div>
+      <div class="last">
+        <img src="pexels-lisa-fotios-1279330.jpg" alt="" />
+        <img src="1324949.jpg" alt="" />
+        <img src="pexels-cats-coming-674574.jpg" alt="" />
       </div>
     </section>
   </body>
