--- a/main.html
+++ b/main.html
@@ -12,11 +12,11 @@
       <div class="icon"></div>
       <div class="menu_h">
         <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">MENU</a></li>
-          <li><a href="#">GALLERY</a></li>
-          <li><a href="#">HEALTHYTIPS</a></li>
+          <li><a href="#home">HOME</a></li>
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#menu">MENU</a></li>
+          <li><a href="#gallery">GALLERY</a></li>
+          <li><a href="healthytips.html">HEALTHYTIPS</a></li>
           <li><a href="contactus.html">CONTACTUS</a></li>
         </ul>
       </div>
