--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="content">
         <h1>DESI CUISINE</h1>
         <p class="par">We are the connoisseur of spices</p>
-        <button class="cn"><a href="#">FEEDBACK</a></button>
+        <button class="cn"><a href="contactus.html">FEEDBACK</a></button>
       </div>
     </div>
     <div class="about" id="about">
@@ -57,7 +57,9 @@
               Biryani
             </h2>
             <h3>₹ 600</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
         <div class="sdish">
@@ -68,7 +70,9 @@
               Butter Masala
             </h2>
             <h3>₹ 450</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
       </div>
@@ -79,7 +83,9 @@
           <div class="ninfo">
             <h2>Vegatable<br />Salad</h2>
             <h3>₹ 200</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
         <div class="ndish">
@@ -87,7 +93,9 @@
           <div class="ninfo">
             <h2>Fruit and Nut<br />Salad</h2>
             <h3>₹ 300</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
         <div class="ndish">
@@ -95,7 +103,9 @@
           <div class="ninfo">
             <h2>Sahi veg<br />Soup</h2>
             <h3>₹ 250</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
       </div>
@@ -109,7 +119,9 @@
               Butter Masala
             </h2>
             <h3>₹ 450</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
         <div class="ndish">
@@ -117,7 +129,9 @@
           <div class="ninfo">
             <h2>Pepperoni<br />Pizza</h2>
             <h3>₹ 550</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
         <div class="ndish">
@@ -125,7 +139,9 @@
           <div class="ninfo">
             <h2>Mushroom<br />Masala</h2>
             <h3>₹ 400</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
       </div>
@@ -136,7 +152,9 @@
           <div class="ninfo">
             <h2>Kesari<br />Rasmalai</h2>
             <h3>₹ 70</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
         <div class="ndish">
@@ -144,7 +162,9 @@
           <div class="ninfo">
             <h2>Chocolate<br />Ice cream</h2>
             <h3>₹ 50</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
         <div class="ndish">
@@ -152,7 +172,9 @@
           <div class="ninfo">
             <h2>Gulab<br />Jamun</h2>
             <h3>₹ 60</h3>
-            <button class="obtn"><a href="#" class="abtn">ORDER NOW</a></button>
+            <button class="obtn">
+              <a href="contactus.html" class="abtn">ORDER NOW</a>
+            </button>
           </div>
         </div>
       </div>
